--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   </head>
 
-  <body class="bg-darkbg">
+  <body class="bg-darkbg text-white">
     <div id="root"></div>
   </body>
 
